# ResearchPlayground

./: .eslintrc.json  .gitignore  .gitmodules  README.md  docker-compose.yml  main.py  package.json  scratchpad.cpp  scratchpad.py  tsconfig.json  workspace.odg
.github/workflows/: CI.yml  lint.yml  reuseable.yml
AMP/: CMakeLists.txt  README.md  docker-compose.yml
AMP/graphs/: workspace.fodg
AMP/include/: auto_mixed_precision.h
AMP/src/: CMakeLists.txt  auto_mixed_precision.cpp  vecadd.cu
BasePointsCalculator/: base_points_calculator.ipynb
BatchNorm/: docker-compose.yml  main.py
CSC2516/: .gitignore  Assignment2-Workspace.odg  Assignment2-Workspace.py  Project_Peer_Reviews.md  docker-compose.yml
CSC2516/GNNAdvisor-patches/: Fix-the-PyTorch-dependency.patch  GNNAdvisor_core_changes.patch
CSC2516/GNNAdvisor-saved_artifacts/: citeseer-gcn-1729.csv  citeseer-gcn.csv  citeseer-gin.csv  citeseer-gin_v2.csv  gin-DGL.csv  gin-EarlyMLP.csv  gin-GNNAdvisor.csv  plotter.py  test_plot.py
CSC2516/Programming_Assignment_1/: 1-GloVe.py  starter_code.py
CSC2516/dockerfiles/: jupyter.Dockerfile  nvvp.Dockerfile
CSC2516/figures/: Assignment1-Workspace.odg  Project-Workspace.odg
Figures/Storm_Access/: Makefile  Workspace.odg
LeetCode/: 169-Majority_Element.cpp  23-Merge_k_Sorted_Lists.cpp  Makefile  Q112-Path_Sum.cpp  Q509-Fibonacci_Number.cpp  Q70-Climbing_Stairs.cpp  README.md  common_utilities.h
LeetCode/BFS/: 127-Word_Ladder.cpp
LeetCode/Binary_Search/: 33-Search_in_Rotated_Sorted_Array.cpp
LeetCode/DFS/: 934-Shortest_Bridge.cpp
LeetCode/Divide_and_Conquer/: 169-Majority_Element.cpp  23-Merge_k_Sorted_Lists.cpp  240-Search_a_2D_Matrix_II.py
LeetCode/Dynamic_Programming/: 213-House_Robber_II.cpp
LeetCode/Greedy/: 213-House_Robber_II.cpp
LeetCode/Interval/: 1094-Car_Pooling.cpp
Scratchpad/: Coding_Template.cpp  Grape.cpp  Grape.py  GrapePegasus.py  Makefile  getAreaOfMaximalSquare.cpp  getLengthOfLongestSubstring.cpp  main copy 2.cpp  main copy.cpp
bash/: main.sh
bazel/lib/: BUILD
cudaStream/: CMakeLists.txt  Dockerfile  MLFrameworks.Dockerfile  cmake-cu90.Dockerfile  mxnet_dense2.py  tensorflow_dense2.py
cudaStream/src/: CMakeLists.txt  cuda_stream.cpp  cuda_stream.cu
dockerfiles/: Dockerfile  cmake-cu100.Dockerfile  cmake-cu90.Dockerfile  docker-compose.yml  mxnet-cu90.Dockerfile
fp16/: CMakeLists.txt  docker-compose.yml
heap/: heap.cpp
javascript/: cli.ts  schema.ts  validate.ts
nnvm_Gradient/: gradient.cpp
nvml/: CMakeLists.txt  docker-compose.yml  used_gpu_memory.cu
nvrtc/: docker-compose.yml
nvrtc/src/: CMakeLists.txt  dynamic_parallelism.cpp  nvrtc_dp.cu
pokemon/: base_points_calculator.ipynb  eternatus.ipynb
procfs/: .procfs2.o.d  Makefile  procfs2.c  procfs2_user_space.cpp
pytest/: test.py
python/: main.py  test.py
singularity/: Dockerfile
symtune/: factorize.py  scratchpad.cu  workflow.odg
tensorflow-dev/: .gitignore  installTFNightly.sh
(+27 files in other folders)
